[gd_scene load_steps=6 format=3 uid="uid://co4nfpa72aqf"]

[ext_resource type="Script" path="res://Reference/player.gd" id="1_w1hra"]
[ext_resource type="Script" path="res://Reference/noise_emitter_script.gd" id="2_weh8w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k0b2e"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v1ned"]
size = Vector3(0.5, 0.33, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_bpkov"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 257
collision_mask = 257
script = ExtResource("1_w1hra")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k0b2e")

[node name="cam_pivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="cam_pivot"]

[node name="audio_pos" type="Node3D" parent="."]

[node name="footstep_sounds" type="AudioStreamPlayer3D" parent="audio_pos"]

[node name="Floor_detector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.968609, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor_detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0982572, 0)
shape = SubResource("BoxShape3D_v1ned")

[node name="Noise_emitter" type="Area3D" parent="."]
collision_layer = 257
collision_mask = 257
script = ExtResource("2_weh8w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Noise_emitter"]
shape = SubResource("BoxShape3D_bpkov")

[connection signal="finished" from="audio_pos/footstep_sounds" to="." method="_on_sound_emitter_finished"]
